--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,5 @@ jobs:
     uses: actions/checkout@v3
   - name: Deploy
     uses: JamesIves/github-pages-deploy-action@v4
+    with:
+          folder: build
