--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,6 @@ jobs:
   - name: Deploy
     uses: JamesIves/github-pages-deploy-action@v4
     with:
-          folder: build
+          folder: CICDHtml
+
+
