--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
   - name: Deploy
     uses: JamesIves/github-pages-deploy-action@v4
     with:
-          folder: CICDHtml
+          folder:
 
 
