--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
   - name: Deploy
     uses: JamesIves/github-pages-deploy-action@v4
     with:
-          folder: JoshGibsonUOH/CICDHtml
+          folder: /home/runner/work/CICDHtml/CICDHtml
 
 
 
