--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,8 @@ jobs:
   - name: Checkout Repository
     uses: actions/checkout@v3
   - name: Deploy
-    uses: JamesIves/github-pages-deploy-action@v4
-    with:
-          folder: /home/runner/work/CICDHtml
+    id: deployment
+    uses: actions/deploy-pages@v4
 
 
 
