--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,19 +6,31 @@ on:
       - main
 
 jobs:
- build:
-  runs-on: ubuntu-latest
+  # Build job
+  build:
+    runs-on: ubuntu-latest
 
-  permissions:
-    pages: write      # to deploy to Pages
-    id-token: write   # to verify the deployment originates from an appropriate source
-  
-  steps:
-  - name: Checkout Repository
-    uses: actions/checkout@v3
-  - name: Deploy
-    id: deployment
-    uses: actions/deploy-pages@v4
+  # Deploy job
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
 
 
 
